# chat_with_parliament

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  _quarto.yml  chat_with_parliament.ipynb  docker-compose.yml  pyproject.toml
backend/: agents.py  common.py  preproces.py  preprocess.py  utils.py
docs/: index.html
scripts/: fetch_enhedslisten_politisk_abc_links.py  populate_db.py
