[project]
name = "chat-med-folketinget"
version = "0.1.0"
description = "Agentic delegation for party recommendation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chonkie[model2vec,semantic,st]>=1.5.5",
    "docling>=2.73.0",
    "playwright>=1.49.0",
    "ipykernel>=7.2.0",
    "pydantic-ai>=1.57.0",
    "weaviate-client[agents]>=4.19.2",
    "logfire>=4.22.0",
    "python-dotenv>=1.2.1",
]
